# situational-task-4

./: .gitignore  README.md  pyproject.toml  setup.cfg
apps/sensor/: serializers.py  urls.py  views.py
apps/sensor/alert/: apps.py  models.py  serializers.py  urls.py  views.py
apps/sensor/data/: apps.py  models.py  serializers.py  urls.py  views.py
apps/user/: urls.py  views.py
config/: settings.py  urls.py
